php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #25140 mb_convert_encoding returns FALSE when it tries to convert empty string ('')
Submitted: 2003-08-18 23:07 UTC Modified: 2003-08-19 03:30 UTC
From: hyamamoto at cybozu dot co dot jp Assigned:
Status: Closed Package: mbstring related
PHP Version: 4.3.3RC4 OS: Linux running on x86
Private report: No CVE-ID: None
 [2003-08-18 23:07 UTC] hyamamoto at cybozu dot co dot jp
Description:
------------
mb_convert_encoding returns FALSE instead of expected
empty string when it tries to convert an empty string.


Reproduce code:
---------------
<?php
var_dump( mb_convert_encoding( '', 'SJIS', 'EUC-JP' ) );
?>


Expected result:
----------------
string(0) ""

Actual result:
--------------
bool(false)

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-08-19 03:30 UTC] derick@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 01:00:02 2026 UTC