- Fix for bug #25140 (mb_convert_encoding returns FALSE when it tries to   convert empty string)